<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F6F5F5"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="312dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bg_gradient2"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:foregroundGravity="center_horizontal"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:contentDescription="@string/players_foto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cahya_diantoni" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/nama_developer"
                android:textColor="#fff"
                android:textSize="30sp"
                android:fontFamily="@font/fcbarcelona"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/job_developer"
                android:textColor="#fff"
                android:textSize="20sp"
                />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="25dp">
            <ImageView
                android:contentDescription="@string/icon_email"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/email"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp">
            <ImageView
                android:contentDescription="@string/icon_wa"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/whatsapp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wa"
                android:textColor="#000"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp">
            <ImageView
                android:contentDescription="@string/icon_lokasi"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/lokasi"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lokasi"
                android:textColor="#000"
                android:textSize="18sp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp" >
            <ImageView
                android:contentDescription="@string/icon_github"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/github"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:textColor="#000"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

