<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:contentDescription="@string/logo_barcelona"
            android:layout_marginTop="20dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/fcbarcelona"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/gold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fcbarcelona"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/desc_aplikasi" />

        <Button
            android:id="@+id/btnOk"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#EDBB00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/ok"
            android:layout_gravity="center"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>