<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        app:tint="@color/white"
        app:borderWidth="0dp"
        android:src="@drawable/ic_share"
        android:backgroundTint="@color/gold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="510sp"
                android:background="@color/blue">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="400sp"
                    android:background="@color/blue"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="50sp"
                        android:background="@color/blue"
                        >

                        <ImageView
                            android:contentDescription="@string/players_foto"
                            android:id="@+id/img_item_photo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/blue"
                            android:src="@drawable/sample_barca" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/posisi"
                            android:textColor="@color/gold"
                            android:textSize="30sp"
                            android:fontFamily="@font/fcbarcelona"
                            android:id="@+id/tv_set_posisi" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="300sp"
                            android:text="@string/nama_pemain"
                            android:textColor="@color/yellow"
                            android:textSize="40sp"
                            android:fontFamily="@font/fcbarcelona"
                            android:id="@+id/tv_set_name" />
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120sp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="30sp"
                    android:layout_centerHorizontal="true"
                    >
                    <LinearLayout
                        android:baselineAligned="false"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="3"
                        android:orientation="horizontal"
                        android:padding="10sp"
                        android:background="@color/gold">
                        <LinearLayout
                            android:layout_width="0sp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ttl_appearances"
                                android:textSize="15sp"
                                android:textColor="#000"
                                 />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/appearances"
                                android:textSize="27sp"
                                android:textColor="@color/burgundy"
                                android:textStyle="bold"
                                android:id="@+id/tv_set_appearances" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0sp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ttl_goals"
                                android:textSize="15sp"
                                android:textColor="#000"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/goals"
                                android:textSize="27sp"
                                android:textColor="@color/burgundy"
                                android:textStyle="bold"
                                android:id="@+id/tv_set_goals" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0sp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ttl_assists"
                                android:textSize="15sp"
                                android:textColor="#000"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/assists"
                                android:textSize="27sp"
                                android:textColor="@color/burgundy"
                                android:textStyle="bold"
                                android:id="@+id/tv_set_assists" />

                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="10sp">
                    <TextView
                        android:id="@+id/tv_set_descriptions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/isi_description"
                        android:textColor="@color/burgundy"
                        android:textSize="20sp"
                        android:fontFamily="@font/fcbarcelona"
                        android:paddingHorizontal="20sp"
                        android:layout_gravity="center_vertical"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="10sp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ttl_overview"
                        android:textColor="#000"
                        android:fontFamily="@font/fcbarcelona"
                        android:textSize="25sp"
                        android:paddingLeft="15sp"
                        android:paddingRight="15sp"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="100sp"
                    android:layout_marginStart="10sp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/overview"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/fcbarcelona"
                        android:textSize="15sp"
                        android:paddingHorizontal="20sp"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/tv_set_overview" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>